--- a/Project.toml
+++ b/Project.toml
@@ -11,8 +11,12 @@ MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 MLJBase = "0.9.2"
 
 [extras]
+DecisionTree = "7806a523-6efd-50cb-b5f6-3fa6f1930dbb"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
+NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", ]
+test = ["Test", "DecisionTree", "Distances", "MultivariateStats", "NearestNeighbors"]
 
