--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Anthony D. Blaom <anthony.blaom@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+ComputationalResources = "ed09eef8-17a6-5b46-8889-db040fac31e3"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 
@@ -19,4 +20,3 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "DecisionTree", "Distances", "MultivariateStats", "NearestNeighbors"]
-
