--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 
 [compat]
-MLJBase = "0.9.2"
+MLJBase = "^0.10"
 
 [extras]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
