--- a/Project.toml
+++ b/Project.toml
@@ -24,8 +24,9 @@ MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 ScientificTypes = "321657f4-b219-11e9-178b-2701a2544e81"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["CategoricalArrays", "DecisionTree", "Distances", "Distributions", "LinearAlgebra", "MultivariateStats", "NearestNeighbors", "ScientificTypes", "Statistics", "Tables", "Test"]
+test = ["CategoricalArrays", "DecisionTree", "Distances", "Distributions", "LinearAlgebra", "MultivariateStats", "NearestNeighbors", "ScientificTypes", "Statistics", "StatsBase", "Tables", "Test"]
